--- a/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
+++ b/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="BusArrivalPrediction.cs" />
     <Compile Include="Postcode.cs" />
+    <Compile Include="PostcodeApiResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
