--- a/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
+++ b/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusArrivalPrediction.cs" />
+    <Compile Include="BusStop.cs" />
+    <Compile Include="BusStopApiResponse.cs" />
     <Compile Include="Postcode.cs" />
     <Compile Include="PostcodeApiResponse.cs" />
     <Compile Include="Program.cs" />
