--- a/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
+++ b/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
@@ -56,7 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bus.cs" />
+    <Compile Include="BusArrivalPrediction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
