--- a/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
+++ b/BusBoard.ConsoleApp/BusBoard.ConsoleApp.csproj
@@ -59,7 +59,7 @@
     <Compile Include="Bus.cs" />
     <Compile Include="BusStop.cs" />
     <Compile Include="BusStopApiResponse.cs" />
-    <Compile Include="Postcode.cs" />
+    <Compile Include="PostcodeLocation.cs" />
     <Compile Include="PostcodeApiResponse.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
