--- a/BusBoard.Api/BusBoard.Api.csproj
+++ b/BusBoard.Api/BusBoard.Api.csproj
@@ -53,7 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Bus.cs" />
+    <Compile Include="BusArrivalPrediction.cs" />
     <Compile Include="BusStop.cs" />
     <Compile Include="BusStopApiResponse.cs" />
     <Compile Include="PostcodeApiResponse.cs" />
