--- a/BusBoard.Api/BusBoard.Api.csproj
+++ b/BusBoard.Api/BusBoard.Api.csproj
@@ -56,6 +56,7 @@
     <Compile Include="BusArrivalPrediction.cs" />
     <Compile Include="BusStop.cs" />
     <Compile Include="BusStopApiResponse.cs" />
+    <Compile Include="Disruption.cs" />
     <Compile Include="PostcodeApi.cs" />
     <Compile Include="PostcodeApiResponse.cs" />
     <Compile Include="PostcodeLocation.cs" />
