Adds models to represent Arrivals and Disruptions at a stop

--- a/BusBoard.Web/BusBoard.Web.csproj
+++ b/BusBoard.Web/BusBoard.Web.csproj
@@ -159,6 +159,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\ArrivalsAtStop.cs" />
+    <Compile Include="Models\DisruptionsAtStop.cs" />
     <Compile Include="Models\PostcodeSelection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\BusInfo.cs" />
