--- a/BusBoard.Web/BusBoard.Web.csproj
+++ b/BusBoard.Web/BusBoard.Web.csproj
@@ -159,7 +159,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\ArrivalsAtStop.cs" />
+    <Compile Include="Models\StopInfo.cs" />
     <Compile Include="Models\DisruptionsAtStop.cs" />
     <Compile Include="Models\PostcodeSelection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
